hphp/test/slow/constants/concretization_conflict_granchild.php.expectf
Fatal error: C cannot inherit the type constant T from I, because it was previously inherited from %rA|B%r in %s/hphp/test/slow/constants/concretization_conflict_granchild.php on line 16
